[package]
name = "encointer-currencies-host-calls"
version = "0.1.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

[dependencies]
log             = { version = "0.4", optional = true }  # Todo: replace with runtime logger: palette-support/debug
env_logger 		= { version = "0.6", optional = true }
geo             = { version = "0.12.2", optional = true }

[dependencies.runtime-interface]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-runtime-interface"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.runtime-io]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-io"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
features = ["disable_allocator", "disable_panic_handler", "disable_oom"]

[features]
default = ["std"]
std = [
    "log",
    "env_logger",
    "runtime-interface/std",
    "geo"
]
